# CCAR-Copilot

./: .editorconfig  .gitignore  .prettierrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  RELEASE_NOTES.md  anki-card.html  clippy.toml  dev-openvino.ps1  eslint.config.js  index.html  mouse-highlight-overlay.html  ocr-result.html  overlay.html  package-lock.json  package.json  pin.html  recording-control.html  recording-preview.html  rustfmt.toml  vite.config.ts  vitest.config.ts  workbench.html  工作空间-workspace.code-workspace
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  e2e.yml  release.yml
docs/: API.md  CCAR_MIGRATION_GUIDE.md  OLD_PROJECT_CLEANUP_REPORT.md  document-formatter-troubleshooting.md  file-search-service-uninstall.md  server-architecture.md  server-schema.sql  update-deployment.md
scripts/: align_full.py  build-dev.ps1  build-sidecar.ps1  compare_pdfium_quality.py  diag-156.sh  inspect_ocr_engine.py  migrate_sqlite_to_postgres.py  release.env.ps1.example  release.ps1  sync_regulation_pdf_library.py
scripts/server/: ccar_knowledge_query.py  ccar_knowledge_server.py
src/: AnkiCardApp.vue  App.vue  OcrResultApp.vue  RecordingControlApp.vue  RecordingPreviewApp.vue  WorkbenchApp.vue  anki-card-main.ts  main.ts  mouse-highlight-main.ts  ocr-result-main.ts  overlay-main.ts  pin-main.ts  recording-control-main.ts  recording-preview-main.ts  vite-env.d.ts  vue-i18n.d.ts  workbench-main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  test_resize.rs
src-tauri/.cargo/: config.toml
src-tauri/benches/: annotation_bench.rs  screenshot_bench.rs  sidecar_bench.rs
src-tauri/binaries/: .gitkeep
src-tauri/capabilities/: default.json  overlay.json  pin.json
src-tauri/file-search-service/: Cargo.toml
src-tauri/file-search-service/proptest-regressions/: query.txt
src-tauri/file-search-service/src/: config.rs  error.rs  index.rs  main.rs  models.rs  monitor.rs  persistence.rs  pipe_server.rs  protocol.rs  query.rs  scanner.rs  service.rs
src-tauri/pdfium/: PDFiumConfig.cmake
src-tauri/proptest-regressions/commands/: file_search_cmd.txt
src-tauri/proptest-regressions/database/: history.txt
src-tauri/proptest-regressions/ocr/: preprocessor.txt
src-tauri/proptest-regressions/screenshot/: snapshot_properties.txt
src-tauri/proptest-regressions/window/: focus_properties.txt
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/clipboard/: mod.rs
src-tauri/src/commands/: anki_cmd.rs  auth_cmd.rs  clipboard_cmd.rs  config_cmd.rs  converter_cmd.rs  device_cmd.rs  feature_gate_cmd.rs  file_cmd.rs  file_search_cmd.rs  history_cmd.rs  hotkey_cmd.rs  license_cmd.rs  mod.rs  mouse_highlight_cmd.rs  payment_cmd.rs  recording_cmd.rs  screenshot_cmd.rs  shutdown_cmd.rs  sidecar_cmd.rs  tray_cmd.rs  update_cmd.rs  usage_cmd.rs  window_cmd.rs
src-tauri/src/converter/: docx.rs  html.rs  mod.rs  pdf.rs  text.rs  word_formatter.rs
src-tauri/src/crash_report/: mod.rs
src-tauri/src/database/: history.rs  mod.rs  regulation.rs  settings.rs
src-tauri/src/device/: fingerprint.rs  mod.rs
src-tauri/src/feature_gate/: gate.rs  mod.rs
src-tauri/src/file_search/: client.rs  indexer.rs  keyword_extractor.rs  mod.rs  types.rs
src-tauri/src/hotkey/: manager.rs  mod.rs
src-tauri/src/license/: mod.rs  service.rs
src-tauri/src/logging/: mod.rs
src-tauri/src/mouse_highlight/: effects.rs  mod.rs  tracker.rs
src-tauri/src/ocr/: background_cache.rs  config.rs  detector.rs  engine.rs  layout.rs  mod.rs  openvino_engine.rs  postprocessor.rs  preprocessor.rs  recognizer.rs  types.rs
src-tauri/src/ocr/models/: ch_PP-OCRv4_det_int8.xml  ch_PP-OCRv4_det_preprocessed.xml  ch_PP-OCRv4_rec_int8.xml  ch_PP-OCRv4_rec_preprocessed.xml  convert_models.py  mod.rs  quantize_models.py
src-tauri/src/payment/: mod.rs  xunhupay.rs
src-tauri/src/recording/: audio.rs  encoder.rs  engine.rs  frame_capture.rs  mod.rs
src-tauri/src/regulation/: commands.rs  crawler.rs  filename.rs  index.rs  knowledge.rs  mineru_ocr.rs  mod.rs  online_search.rs  pdf_ocr.rs  schema.rs  search.rs  sync.rs  text_extractor.rs
src-tauri/src/screenshot/: capture.rs  capture_properties.rs  image_hash.rs  mod.rs  snapshot.rs  snapshot_properties.rs  wgc_capture.rs  window_detect.rs
src-tauri/src/sidecar/: manager.rs  mod.rs  protocol.rs
src-tauri/src/single_instance/: lock.rs  mod.rs
src-tauri/src/supabase/: auth.rs  client.rs  database.rs  mod.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/usage/: mod.rs  tracker.rs
src-tauri/src/window/: focus_manager.rs  focus_properties.rs  mod.rs  overlay.rs  pin.rs
src/__tests__/: StaticBackgroundRendering.property.spec.ts
src/components/: ErrorBoundary.vue
src/composables/: index.ts  useAnki.ts  useDocumentFormatter.ts  useExport.ts  useLocale.ts  useOcr.ts  useOcrTextActions.ts  useRecording.ts  useRegulationIndex.ts  useRegulationQuery.ts  useTheme.ts  useToast.ts  useTranslation.ts  useUpdate.ts  useWebScraper.ts  useWordCard.ts
src/locales/: en-US.ts  index.ts  zh-CN.ts
src/services/: exportService.ts  index.ts
src/stores/: auth.ts  clipboardHistory.ts  fileSearch.ts  history.ts  index.ts  regulation.ts  screenshot.ts  settings.ts  sidecar.ts  workbench.ts
src/styles/: theme.css
src/types/: annotation.ts  auth.ts  config.ts  history.ts  index.ts  payment.ts  regulation.ts  screenshot.ts  sidecar.ts
src/utils/: sanitize.ts
test-fixtures/: README.md  generate_test_images.py
test-fixtures/annotation/: test_cases.json
test-fixtures/configs/: default_config.json  hotkey_config.json
test-fixtures/hotkey/: test_cases.json
test-fixtures/ocr/: test_cases.json
test-fixtures/ocr-samples/: chinese.txt  english.txt  mixed.txt
test-fixtures/payloads/: anki_request.json  ocr_request.json  translate_request.json
test-fixtures/responses/: error_response.json  ocr_response.json  translate_response.json
test-fixtures/screenshot/: monitor_scenarios.json
test-fixtures/translation/: test_cases.json
workers/ccar-update/: README.md  package-lock.json  package.json  (+2 more)
(+94 files in other folders)
