[package]
name = "ccar-copilot"
version = "0.1.13"
description = "CCAR Copilot - 民航规章检索与同步工具"
authors = ["wangh"]
edition = "2021"
license = "MIT"
repository = "https://github.com/wangh/ccar-copilot"
default-run = "ccar-copilot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ccar_copilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 核心
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 异步运行时
tokio = { version = "1", features = ["full", "process", "io-util", "sync"] }
futures = "0.3"

# 数据库
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# 错误处理
thiserror = "2"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# UUID 生成
uuid = { version = "1", features = ["v4"] }

# 文件哈希（规章文件去重）
sha2 = "0.10"
dirs = "6"

# 文件搜索索引（全盘文件名搜索）
walkdir = "2"
bincode = "1"

# HTTP 客户端（规章在线搜索）
reqwest = { version = "0.12", features = ["json", "native-tls", "gzip", "multipart", "stream"], default-features = false }

# ZIP 结果包解析（MinerU 在线 OCR）
zip = { version = "2", default-features = false, features = ["deflate"] }

# HTML 解析（规章在线搜索）
scraper = "0.22"
urlencoding = "2.1.3"
encoding_rs = "0.8.35"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 随机数生成
rand = "0.8"

# 图像处理（用于 OCR 图像解码）
image = "0.25"

# OCR 引擎（OpenVINO + PP-OCRv4）
openvino = { version = "0.9", features = ["runtime-linking"] }
ndarray = "0.16"
rayon = "1.10"
num_cpus = "1.16"
once_cell = "1.19"
crossbeam = "0.8"

# PDF 文本提取（pdfium-render: Google PDFium 引擎）
pdfium-render = "0.8.37"
# 文件类型检测
infer = "0.16"

# 全文搜索引擎（规章本地索引）
tantivy = "0.22"
jieba-rs = "0.7"

# Unicode 文本处理（用于关键词提取）
unicode-segmentation = "1.11"
unicode-width = "0.1"

# 正则表达式（用于解析 PDF 链接）
regex = "1"
lazy_static = "1.4"
url = "2"

# 属性测试（通过 --features proptest 启用）
proptest = { version = "1", optional = true }

# Windows API
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_Storage_FileSystem",
] }
# Windows 注册表（用于自动启动）
winreg = "0.52"

[dev-dependencies]
# 临时文件（用于测试）
tempfile = "3"
# 串行测试（用于共享全局状态的测试）
serial_test = "3"
# 日志捕获（用于测试日志输出）
tracing-test = { version = "0.2", features = ["no-env-filter"] }

[features]
default = []
proptest = ["dep:proptest"]
